    ADDED: swap panels / swap sides
    ADDED: synchronizer, threshold for equality, time offset between sides
    ADDED: synchronizer, faster "compare by content" for local files
    ADDED: synchronizer, Feed to listbox
    ADDED: searcher, synchronizer: directory name filters (ex. '* | CVS/')
    ADDED: searcher is able to search content on remote URLs
    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    FIXED: [ 1116161 ] more detailed error message at opening FTP URLs  via HTTP proxy
    FIXED: [ 1103646 ] MountMan exits after umount and a fast click on the device
    FIXED: single click doesn't work in TC selection mode
    FIXED: disk usage crash at deleting files
    FIXED: valgrind: Free Memory Read          - KMountManGUI::clicked()
    FIXED: valgrind: Free Memory Read          - SynchronizerGUI::loadFromProfile()
    FIXED: valgrind: Free Memory Read          - RadialMap::Widget::paintExplodedLabels()
    FIXED: valgrind: Free Memory Read          - DULines::slotChanged()
    FIXED: valgrind: Free Memory Read          - DULines::slotDeleted()
    FIXED: valgrind: Free Memory Read          - KrDetailedView::contentsMousePressEvent()
    FIXED: valgrind: Mismatched delete/delete[]- RadialMap::Builder::Builder()
    FIXED: valgrind: Uninitialized Memory Read - DUFileLight::slotAboutToShow()
    FIXED: valgrind: Free Memory Read          - KViewer::tabCloseRequest()
    FIXED: valgrind: Uninitialized Memory Read - KViewer::tabChanged()
    FIXED: valgrind: Free Memory Read          - PanelManager::slotCloseTab()
    FIXED: [ 1435352 ] crash after NewPanel->Ctrl+U->DeletePanel
    FIXED: HTML tags cause problem to the searcher
    FIXED: [ 1415250 ] searching large directories, doesn't process UI events