@@ -6,5 +6,6 @@ libGUI_a_METASOURCES = AUTO
 
 libGUI_a_SOURCES = dirhistoryqueue.cpp dirhistorybutton.cpp krusaderstatus.cpp \
 	kfnkeys.cpp kcmdline.cpp actionproperty.cpp actionpropertybase.ui \
-	addplaceholderpopup.cpp syncbrowsebutton.cpp profilemanager.cpp krremoteencodingmenu.cpp
+	addplaceholderpopup.cpp syncbrowsebutton.cpp profilemanager.cpp krremoteencodingmenu.cpp \
+	mediabutton.cpp
 noinst_HEADERS = krremoteencodingmenu.h
