@@ -1,3 +1,4 @@
+    ADDED: media button
     ADDED: swap panels / swap sides
     ADDED: synchronizer, threshold for equality, time offset between sides
     ADDED: synchronizer, faster "compare by content" for local files
